Refactor and clean up code across multiple components
- Commented out unused imports and code in DemoContent components for edit-category, page, log-in, product-list, profile-setting, and registration.
- Updated links in registration and log-in components to point to the correct routes.
- Removed localStorage logic from product-list component and replaced it with API calls to fetch products.
- Simplified product table data structure and updated columns for better clarity.
- Enhanced styling in globals.css for select elements and added focus styles.
- Minor adjustments in ProductDetails modal for improved layout and consistency.

--- a/ecomate-main/public/assets/css/style.css
+++ b/ecomate-main/public/assets/css/style.css
@@ -25934,7 +25934,7 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
 
 @media (max-width: 900px) {
   .rts-product-details-section .details-product-area {
-    flex-direction: column;
+    /* flex-direction: column; */
   }
 
   .rts-product-details-section .details-product-area .product-thumb-area {
@@ -26016,10 +26016,10 @@ header.header-three .sub-dropdown .submenu.third-lvl.base {
   max-width: 225px !important;
 }
 
-.rts-product-details-section .details-product-area {
+/* .rts-product-details-section .details-product-area {
   display: flex;
   align-items: flex-start;
-}
+} */
 
 @media only screen and (max-width: 1199px) {
   .rts-product-details-section .details-product-area {
