--- a/ecomate-main/src/app/globals.css
+++ b/ecomate-main/src/app/globals.css
@@ -62,3 +62,20 @@ select:disabled {
   color: #6b7280;
   cursor: not-allowed;
 }
+
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+  display: none;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #f8fafc;
+  border-radius: 4px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #cbd5e1;
+  border-radius: 4px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #94a3b8;
+}
